2020-12-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7-alpha03: Pernil';git push
	git tag -a 4.9.7-alpha03 -m 'nco_flt_enm; ncks, ncap2 --ccr; ncclimo/ncremap Chrysalis';git push --tags

	* nco_grd_nfr() found error in MPAS restart for QU120_zach.nc

	* nco_grd_nfr() add logic to convey correct units (radians, m2)	for MPAS angles and area

2020-12-18  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() add logic to retrieve MPAS bounds-related variables from restart files

	* ncap2 accept negative Zstandard compression levels

	* Merge "Add all NetCDF/HDF5 dependencies to CMAKE_REQUIRED_LIBRARIES" by Kyle Gerheiser

2020-12-17  Charlie Zender  <zender@uci.edu>

	* ncap2 now uses --ccr to invoke CCR filters on all unchanged variables!

	* ncclimo update interactive compute node procedures

	* libnco add nco_dfl_case_flt_err()

	* ncap2 support --ccr via nco_var_dfn()

	* ncclimo/ncremap add chrlogin* and compute nodes to chrysalis support

2020-12-16  Charlie Zender  <zender@uci.edu>

	* Create global variable to hold user-specified filter enum

	* Add nco_flt_sng2enm() to convert user-specified string to ID/enum

	* ncclimo clarify error message encountered when cam names are assumed and eam names are desired

	* Create nco_ccr.[ch] for CCR, filter, and codec-related code

2020-12-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7-alpha02: Pork Butt';git push
	git tag -a 4.9.7-alpha02 -m 'andes, S1D infrastructure, CCR detection; ncclimo --glb_avg wait() fix';git push --tags

	* ncclimo implement wait() section for --glb_avg

	* autoconf support for CCR detection/linking

	* nco.texi document caseid meaning in high-frequency modes

2020-12-13  Charlie Zender  <zender@uci.edu>

	* Start to define horizontal grid in output file

	* Inspect variables for sparse-1D dimensions

2020-12-10  Charlie Zender  <zender@uci.edu>
